quoin-macros-tests/tests/ui/render_missing_colon.stderr
error: expected `:`
 --> tests/ui/render_missing_colon.rs:5:19
  |
5 |         div(class "flex") { // Missing colon after class
  |                   ^^^^^^
